# partial-orders

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  alone.v  alone_fun.v  bw.v  orders.v  rocq-partial-orders.opam  split_tc.v  sups.v  thoughts.md
.github/workflows/: nix-action-default.yml
.nix/: config.nix
.nix/coq-overlays/partial-orders/: default.nix
attic/: alone.v  level_attempts.v  orders.v  split.v  split_tc.v
tests/: cs_sanity.v  cs_sanity_gpo.v  cs_sanity_ipo.v  cs_sanity_po.v  cs_sanity_setoid.v  cs_sanity_spo.v  hb_sanity.v  hb_sanity_gpo.v  hb_sanity_ipo.v  hb_sanity_po.v  hb_sanity_setoid.v  hb_sanity_spo.v  sanity.v  sanity_gfp.v  sanity_gpo.v  sanity_infs.v  sanity_instances.v  sanity_ipo.v  sanity_lattice.v  sanity_lfp.v  sanity_partialorder.v  sanity_po.v  sanity_setoid.v  sanity_spo.v  sanity_sups.v
theories/: adjunction.v  adjunctions.v  chain.v  closure.v  cs_adjunctions.v  cs_categories.v  cs_chain.v  cs_gpo.v  cs_instances.v  cs_ipo.v  cs_po.v  cs_setoid.v  cs_spo.v  fsets.v  gfp.v  gpo.v  hb.v  hb_adjunctions.v  hb_categories.v  hb_chain.v  hb_chain_alt.v  hb_chain_old.v  hb_gfp.v  hb_gpo.v  hb_inf.v  hb_instances.v  hb_ipo.v  hb_lattice.v  hb_lfp.v  hb_po.v  hb_sanity.v  hb_setoid.v  hb_spo.v  hb_sup.v  hb_total.v  infs.v  instances.v  ipo.v  lattice.v  lfp.v  (+10 more)
